@@ -6,6 +6,7 @@ Changes in 1.5.0
     * [FELIX-5813] - EventAdmin async threads should be named
 ** Bug
     * [FELIX-5738] - EventAdmin IgnoreTopic config. property doesn't support wildcards
+    * [FELIX-5831] - Async/sync Thread Pool Ratio is not changeable at runtime
 
 
 Changes from 1.4.6 to 1.4.8
